# BMHE-Analytics

./: .env  README.md  bmhe.db  pyproject.toml
.history/: alembic_20250524090507.ini
.history/mcp_backend/: .env_20250520065736  .env_20250520065744  .env_20250520065752  .env_20250520065758  .env_20250520065812  pyproject_20250518132054.toml  pyproject_20250519071830.toml  pyproject_20250519071831.toml  pyproject_20250523180238.toml
.history/mcp_backend/app/: main_20250518131546.py  main_20250518135556.py  main_20250519192317.py  main_20250519192330.py  main_20250519193129.py  main_20250519193146.py  main_20250520064620.py  main_20250520064645.py  main_20250520064648.py  main_20250520064652.py  main_20250520064654.py  main_20250520064700.py  main_20250520174704.py  main_20250521064736.py  main_20250521064921.py  main_20250524103317.py  main_20250524103600.py  main_20250524104635.py  pyproject_20250518131803.toml  pyproject_20250518131924.toml  pyproject_20250518131927.toml  pyproject_20250518131929.toml
.history/mcp_backend/app/config/: cors_20250519193110.py  (+28 more)
mcp_backend/: alembic.ini  pyproject.toml
mcp_backend/app/config/: database.py
mcp_backend/app/domain/models/: base.py  estado.py
mcp_backend/app/domain/schemas/: endereco.py  user.py
mcp_backend/app/exceptions/: handlers.py  security_exceptions.py
mcp_backend/app/repositories/: role_repo.py
mcp_backend/app/routers/: user_router.py
mcp_backend/app/security/: authorization_service.py  user_loader.py
mcp_backend/app/services/: whatsapp_service.py
mcp_backend/db/migration/: env.py
(+377 files in other folders)
